result/scope_test%20231224102924%/39%original%Intersperse%intersperse%d1/1/temp/compile_error.txt
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231224102924%/39%original%Intersperse%intersperse%d1/1/temp/Intersperse_39_1Test.java:2: error: class, interface, or enum expected
package test;
^
1 error
